--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,10 @@
-Flask==1.1.2
-Jinja2==2.10.3
-Keras==2.2.4
-matplotlib==3.0.1
 nltk==3.3
+Flask==1.1.2
 numpy==1.15.4
 pandas==0.23.4
-regex==2019.12.9
-requests==2.22.0
 scikit-learn==0.22.1
-scipy==1.1.0
-ujson==1.35
+gunicorn==20.0.4
+Werkzeug==0.16.0
+Jinja2==2.10.3
+itsdangerous==1.1.0
+MarkupSafe==1.1.1
